--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
   box-sizing: border-box;
   font-family: 'Times New Roman', Times, serif;
   background-color: rgb(47, 54, 54);
+  color: white;
   height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
 }
