--- a/Components/MainBox.css
+++ b/Components/MainBox.css
@@ -2,11 +2,12 @@
 
 
     background-color: rgb(14, 72, 52);
-    height: 50vh;
-    width: 50%;
+    width: 30%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin: 0px auto;
     border-radius: 10px;
+    align-items: center;
     outline: none;
     padding: 20px;
 
